8204628: [AArch64] Assertion failure in BarrierSetAssembler::load_at

Reviewed-by: aph, drwhite, eosterlund, adinn